done tt comments for sup revision

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -1,6 +1,7 @@
 # Classification I: training & predicting {#classification}
 
-```{r 05-setup, message = FALSE, warning = FALSE, echo = FALSE}
+```{r 05-setup, include = FALSE}
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
 # colour palette
 cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999")
 ```
