--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1,6 +1,7 @@
 # Classification II: evaluation & tuning {#classification_continued}
 
-```r{06-setup, include = FALSE, message = FALSE, warning = FALSE, echo = FALSE}
+```{r 06-setup, include = FALSE}
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
 # colour palette
 cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999")
 ```
@@ -720,9 +721,9 @@ knitr::include_graphics("img/train-test-overview.jpeg")
 
 The overall workflow for performing K-nearest neighbour classification using `tidymodels` is as follows:
 
-1. Use the `initial_split` function to split the data into a training and test set. Set the `strata` argument to the response variable. Put the test set aside for now.
+1. Use the `initial_split` function to split the data into a training and test set. Set the `strata` argument to the class label variable. Put the test set aside for now.
 2. Use the `vfold_cv` function to split up the training data for cross validation.
-3. Create a `recipe` that specifies the response and predictor variables, as well as preprocessing steps for all variables. Pass the training data as the `data` argument of the recipe.
+3. Create a `recipe` that specifies the class label and predictors, as well as preprocessing steps for all variables. Pass the training data as the `data` argument of the recipe.
 4. Create a `nearest_neighbors` model specification, with `neighbors = tune()`.
 5. Add the recipe and model specification to a `workflow()`, and use the `tune_grid` function on the train/validation splits to estimate the classifier accuracy for a range of $K$ values.
 6. Pick a value of $K$ that yields a high accuracy estimate that doesn't change much if you change $K$ to a nearby value.
@@ -982,7 +983,7 @@ so we will have to code it ourselves. First we will use the `select` function
 to extract the "total" set of predictors that we are willing to work with. 
 Here we will load the modified version of the cancer data with irrelevant 
 predictors, and select `Smoothness`, `Concavity`, `Perimeter`, `Irrelevant1`, `Irrelevant2`, and `Irrelevant3`
-as potential predictors, and the `Class` variable as the response.
+as potential predictors, and the `Class` variable as the label.
 We will also extract the column names for the full set of predictor variables.
 ```{r 06-fwdsel, warning = FALSE}
 set.seed(1)
