--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -408,10 +408,8 @@ lm_mult_test_results <- mlm_fit %>%
 lm_mult_test_results
 ```
 Our model's test error as assessed by RMSPE
-is `r format(round(lm_mult_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`,
-  
-
-In the case of two predictors, our linear regression creates a *plane* of best fit, as
+is `r format(round(lm_mult_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`.
+In the case of two predictors, we can plot the predictions made by our linear regression creates a *plane* of best fit, as
 shown in Figure \@ref(fig:08-3DlinReg).
 
 ```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Linear regression plane of best fit overlaid on top of the data (using price, house size, and number of bedrooms as predictors)"}
