--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -74,6 +74,13 @@ is that we are now predicting numerical variables instead of categorical variabl
 In this chapter and the next, we will study the Sacramento real estate data
 set. This data set contains 932 real estate transactions in Sacramento,
 California [originally reported in the Sacramento Bee newspaper](https://support.spatialkey.com/spatialkey-sample-csv-data/).
+We first need to formulate a precise question that
+we want to answer. In this example, our question is again predictive:
+can we use the size of a house in the Sacramento, CA area to predict
+its sale price? A rigorous, quantitative answer to this question might help
+a realtor advise a client as to whether the price of a particular listing 
+is fair, or perhaps how to set the price of a new listing.
+We begin the analysis by loading and examining the data.
 
 ```{r 07-load, message = FALSE}
 library(tidyverse)
@@ -85,13 +92,6 @@ set.seed(5)
 sacramento <- read_csv("data/sacramento.csv")
 sacramento
 ```
-
-We first need to formulate a precise question that
-we want to answer. In this example, our question is predictive:
-can we use the size of a house in the Sacramento, CA area to predict
-its sale price? A rigorous, quantitative answer to this question might help
-a realtor advise a client as to whether the price of a particular listing 
-is fair, or perhaps how to set the price of a new listing.
 
 The scientific question guides our initial exploration: the columns in the
 data that we are interested in are `sqft` (house size, in livable square feet)
@@ -223,26 +223,84 @@ sacramento_test <- testing(sacramento_split)
 ```
 
 Next, we'll use cross-validation to choose $K$. In KNN classification, we used
-accuracy to see how well our predictions matched the true labels. Here in the
+accuracy to see how well our predictions matched the true labels. We cannot use
+the same metric in the regression setting, since our predictions will almost never
+*exactly* match the true response variable values. Therefore in the
 context of KNN regression we will use root mean square prediction error
 (RMSPE) instead. The mathematical formula for calculating RMSPE is: 
 
 $$\text{RMSPE} = \sqrt{\frac{1}{n}\sum\limits_{i=1}^{n}(y_i - \hat{y}_i)^2}$$
 
-Where:
+where:
 
 - $n$ is the number of observations
 - $y_i$ is the observed value for the $i^\text{th}$ observation
 - $\hat{y}_i$ is the forcasted/predicted value for the $i^\text{th}$ observation
 
-A key feature of the formula for RMPSE is the squared difference between the observed
-target/response variable value, $y$, and the prediction target/response
-variable value, $\hat{y}_i$, for each observation (from 1 to $i$).
+In other words, we compute the *squared* difference between the predicted and true response 
+value for each observation in our test (or validation) set, compute the average, and then finally
+take the square root. The reason we use the *squared* difference (and not just the difference)
+is that the differences can be positive or negative, i.e., we can overshoot or undershoot the true
+response value. Figure \@ref(fig:07-verticalerrors) illustrates both positive and negative differences
+between predicted and true response values.
+So if we want to measure error&mdash;a notion of distance between our predicted and true response values&mdash;we 
+want to make sure that we are only adding up positive values, with larger positive values representing larger
+mistakes.
 If the predictions are very close to the true values, then
 RMSPE will be small. If, on the other-hand, the predictions are very
 different to the true values, then RMSPE will be quite large. When we
 use cross validation, we will choose the $K$ that gives
 us the smallest RMSPE.
+
+```{r 07-verticalerrors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with example predictions (blue line) and the error in those predictions compared with true response values for three selected observations (vertical red lines).", fig.height = 4, fig.width = 5}
+
+# save the seed
+
+seedval <- .Random.seed
+
+# (synthetic) new prediction points
+pts <- tibble(sqft = c(1250, 1850, 2250), price = c(250000, 200000, 500000))
+finegrid <- tibble(sqft = seq(from = 900, to = 3900, by = 10))
+
+# fit the model
+sacr_recipe_hid <- recipe(price ~ sqft, data = small_sacramento) %>%
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors())
+
+sacr_spec_hid <- nearest_neighbor(weight_func = "rectangular", neighbors = 4) %>%
+  set_engine("kknn") %>%
+  set_mode("regression")
+
+sacr_fit_hid <- workflow() %>%
+  add_recipe(sacr_recipe_hid) %>%
+  add_model(sacr_spec_hid) %>%
+  fit(data = small_sacramento)
+
+sacr_full_preds_hid <- sacr_fit_hid %>% 
+                           predict(finegrid) %>%
+                           bind_cols(finegrid)
+
+sacr_new_preds_hid <- sacr_fit_hid %>% 
+                           predict(pts) %>%
+                           bind_cols(pts)
+
+# plot the vertical prediction errors
+errors_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
+  geom_point() +
+  xlab("House size (square feet)") +
+  ylab("Price (USD)") +
+  scale_y_continuous(labels = dollar_format()) +
+  geom_line(data = sacr_full_preds_hid, aes(x = sqft, y = .pred), color = "blue") + 
+  geom_segment(
+    data = sacr_new_preds_hid,
+    aes(x = sqft, xend = sqft, y = price, yend = .pred), color = "red") + 
+  geom_point(data = sacr_new_preds_hid, aes(x = sqft, y = price), color = "black")
+
+# restore the seed
+.Random.seed <- seedval
+
+errors_plot
+```
 
 > **RMSPE versus RMSE**
 When using many code packages (`tidymodels` included), the evaluation output 
@@ -261,13 +319,20 @@ and rely on context to denote which data the root mean squared error is being ca
 
 Now that we know how we can assess how well our model predicts a numerical
 value, let's use R to perform cross-validation and to choose the optimal $K$.
-First, we will create a model specification for K-nearest neighbours regression,
-as well as a recipe for preprocessing our data. Note that we use `set_mode("regression")`
-now in the model specification to denote a regression problem, as opposed to the classification
-problems from the previous chapters. Note also that we include standardization
+First, we will create a recipe for preprocessing our data.
+Note that we include standardization
 in our preprocessing to build good habits, but since we only have one 
 predictor it is technically not necessary; there is no risk of comparing two predictors
 of different scales.
+Next we create a model specification for K-nearest neighbours regression. Note 
+that we use `set_mode("regression")`
+now in the model specification to denote a regression problem, as opposed to the classification
+problems from the previous chapters. 
+The use of `set_mode("regression")` essentially
+ tells `tidymodels` that we need to use different metrics (RMSPE, not accuracy)
+for tuning and evaluation.
+Then we create a 5-fold cross validation object, and put the recipe and model specification together
+in a workflow.
 
 ```{r 07-choose-k-knn}
 sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) %>%
@@ -285,12 +350,16 @@ sacr_wkflw <- workflow() %>%
   add_model(sacr_spec)
 sacr_wkflw
 ```
-The major difference you can see in the above workflow compared to previous
-chapters is that we are running regression rather than classification. The fact
-that we use `set_mode("regression")` essentially
-tells `tidymodels` that we need to use different metrics (RMSPE, not accuracy)
-for tuning and evaluation. You can see this in the following code, which tunes
-the model and returns the RMSPE for each number of neighbours. 
+Next we run cross validation for a grid of numbers of neighbours ranging from 1 to 200. 
+The following code tunes
+the model and returns the RMSPE for each number of neighbours. In the below
+results data frame, the `neighbors` variable contains the value of $K$,
+the mean (`mean`) contains the value of the RMSPE estimated via cross-validation,
+and the standard error (`std_err`) is a measure of how uncertain we are in the mean value. A detailed treatment of this
+is beyond the scope of this chapter; but roughly, if your estimated mean is 100,000 and standard
+error is 1,000, you can expect the *true* RMSPE to be somewhere roughly between 99,000 and 101,000 (although it may
+fall outside this range). You may ignore the other columns in the metrics data frame,
+as they do not provide any additional insight.
 
 ```{r 07-choose-k-knn-results}
 
@@ -298,44 +367,42 @@ gridvals <- tibble(neighbors = seq(from = 1, to = 200, by = 3))
 
 sacr_results <- sacr_wkflw %>%
   tune_grid(resamples = sacr_vfold, grid = gridvals) %>%
-  collect_metrics()
-
-# show all the results
-sacr_results
-```
-We take the *minimum* RMSPE to find the best setting for the number of neighbours:
-```{r 07-choose-k-knn-results-2}
-# show only the row of minimum RMSPE
-sacr_min <- sacr_results %>%
-  filter(.metric == "rmse") %>%
-  filter(mean == min(mean))
-sacr_min
-```
-Here we can see that the smallest RMSPE occurs when $K =$ `r sacr_min %>% pull(neighbors)`.
-
-## Underfitting and overfitting
-Similar to the setting of classification, by setting the number of neighbours
-to be too small or too large, we cause the RMSPE to increase, as shown in
-Figure \@ref(fig:07-choose-k-knn-plot).  What is happening here? 
-
-```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Effect of the number of neighbours on the RMSPE"} 
-sacr_results <- sacr_results %>%
+  collect_metrics() %>%
   filter(.metric == "rmse")
 
+# show the results
+sacr_results
+```
+```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Effect of the number of neighbours on the RMSPE"} 
 sacr_tunek_plot <- ggplot(sacr_results, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
   labs(x = "Neighbours", y = "RMSPE")
-
-kmin <- sacr_min %>% pull(neighbors)
-
 sacr_tunek_plot
 ```
+Figure \@ref(fig:07-choose-k-knn-plot) visualizes how the RMSPE varies with the number of neighbours $K$.
+We take the *minimum* RMSPE to find the best setting for the number of neighbours:
+```{r 07-choose-k-knn-results-2}
+# show only the row of minimum RMSPE
+sacr_min <- sacr_results %>%
+  filter(mean == min(mean))
+sacr_min
+```
+The smallest RMSPE occurs when $K =$ `r sacr_min %>% pull(neighbors)`.
+
+```{r 07-get-kmin, echo = FALSE, message = FALSE, warning = FALSE}
+kmin <- sacr_min %>% pull(neighbors)
+```
+
+## Underfitting and overfitting
+Similar to the setting of classification, by setting the number of neighbours
+to be too small or too large, we cause the RMSPE to increase, as shown in
+Figure \@ref(fig:07-choose-k-knn-plot). What is happening here? 
 
 Figure \@ref(fig:07-howK) visualizes the effect of different settings of $K$ on the
 regression model. Each plot shows the predicted values for house sale price from
 our KNN regression model for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 932 (i.e., the entire dataset).
-For each model, we predict a price for every possible home size across the range of home sizes we
+For each model, we predict prices for the range of possible home sizes we
 observed in the data set (here 500 to 5,000 square feet) and we plot the
 predicted prices as a blue line.
 
@@ -380,9 +447,9 @@ grid.arrange(grobs = plots, ncol = 2)
 ```
 
 Figure \@ref(fig:07-howK) shows that when $K$ = 1, the blue line runs perfectly
-through all of our training observations. 
+through (almost) all of our training observations. 
 This happens because our
-predicted values for a given region depend on just a single observation. 
+predicted values for a given region (typically) depend on just a single observation. 
 In general, when $K$ is too small, the line follows the training data quite
 closely, even if it does not match it perfectly.
 If we used a different training data set of house prices and sizes
