addressed @leem44's more concrete example comment

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -235,9 +235,14 @@ image_read("img/vc5-push.png") %>%
 
 ### Pulling changes from a remote repository
 
-If your collaborators send their own commits to the GitHub repository, 
-they will only initially exist there 
-and not on your own machine (Figure \@ref(fig:vc2-changes)).
+If you are working on a project with collaborators, and they make some changes
+(e.g., to the analysis code in a Jupyter notebook and the project's README file) 
+and want to share them with you using version control. 
+They will go through the process we just
+described above and push their changes to the GitHub repository. 
+When they do this, the changes will only initially exist there on the remote
+GitHub repository,
+and not locally, on your own machine (Figure \@ref(fig:vc2-changes)).
 
 ```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local computer.', fig.retina = 2}
 image_read("img/vc6-remote-changes.png") %>%
