--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1,11 +1,5 @@
 # Classification II: evaluation & tuning {#classification_continued}
 
-```{r 06-setup, include = FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
-# colour palette
-cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999")
-```
-
 ## Overview 
 This chapter continues the introduction to predictive modelling through
 classification. While the previous chapter covered training and data
@@ -61,7 +55,7 @@ of correct predictions by the number of predictions made.
 This process is illustrated in Figure \@ref(fig:06-ML-paradigm-test).
 Note that there are other measures for how well classifiers perform, such as *precision* and *recall*; 
 these will not be discussed here, but you will likely encounter them in other more advanced
-courses on this topic. 
+books on this topic. 
 
 ```{r 06-ML-paradigm-test, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Process for splitting the data and finding the prediction accuracy", fig.retina = 2, out.width = "800"}
 knitr::include_graphics("img/ML-paradigm-test.png")
@@ -143,12 +137,9 @@ glimpse(cancer_test)
 
 We can see from `glimpse` in the code above that the training set contains 427
 observations, while the test set contains 142 observations. This corresponds to
-a train / test split of 75% / 25%, as desired. 
-
-> Note: We use the `glimpse` function to
-> examine the data because it has a large number of columns; `glimpse` outputs the data 
-> such that the columns go down the page (instead of across), which allows us to see 
-> every column in the data frame.
+a train / test split of 75% / 25%, as desired. Recall from chapter \@ref(classification)
+that we use the `glimpse` function to view data with a large number of columns,
+as it prints the data such that the columns go down the page (instead of across).
 
 **Pre-process the data**
 
@@ -700,7 +691,7 @@ for (i in 1:length(ks)) {
     geom_point(data = prediction_table, mapping = aes(x = Smoothness, y = Concavity, color = Class), alpha = 0.02, size = 5.) +
     labs(color = "Diagnosis") +
     ggtitle(paste("K = ", ks[[i]])) +
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
+    scale_color_manual(labels = c("Malignant", "Benign"), values = c("orange2", "steelblue2"))
 }
 grid.arrange(grobs = plots)
 ```
