--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -83,7 +83,7 @@ perim_concav <- cancer |>
   ggplot(aes(x = Smoothness, y = Concavity, color = Class)) +
   geom_point(alpha = 0.5) +
   labs(color = "Diagnosis") +
-  scale_color_manual(labels = c("Malignant", "Benign"), values = c("#E69F00", "#56B4E9"))
+  scale_color_manual(labels = c("Malignant", "Benign"), values = c("orange2", "steelblue2"))
 
 perim_concav
 ```
@@ -137,7 +137,7 @@ glimpse(cancer_test)
 
 We can see from `glimpse` in the code above that the training set contains 427
 observations, while the test set contains 142 observations. This corresponds to
-a train / test split of 75% / 25%, as desired. Recall from chapter \@ref(classification)
+a train / test split of 75% / 25%, as desired. Recall from Chapter \@ref(classification)
 that we use the `glimpse` function to view data with a large number of columns,
 as it prints the data such that the columns go down the page (instead of across).
 
