done post-merge of supervised and forward refs PRs cleanup

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -1,5 +1,9 @@
 # Classification I: training & predicting {#classification}
 
+```{r 05-setup, echo = FALSE, message = FALSE, warning = FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 ## Overview 
 In previous chapters, we focused solely on descriptive and exploratory
 data analysis questions. 
@@ -823,7 +827,10 @@ To better illustrate the problem, let's revisit the breast cancer data; except
 now we will remove many of the observations of malignant tumours, simulating
 what the data would look like if the cancer was rare. We will do this by
 picking only 3 observations randomly from the malignant group, and keeping all
-of the benign observations. The new imbalanced data is shown in Figure \@ref(fig:05-unbalanced).
+of the benign observations. We choose these 3 observations using the `slice_sample`
+function, which takes two arguments: a data frame-like object to sample from 
+and the number of rows to be randomly selected (`n`).
+The new imbalanced data is shown in Figure \@ref(fig:05-unbalanced).
 
 ```{r 05-unbalanced, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data"}
 set.seed(3)
@@ -840,14 +847,15 @@ rare_plot <- rare_cancer |>
   scale_color_manual(labels = c("Malignant", "Benign"), values = c("orange2", "steelblue2"))
 rare_plot
 ```
-> The `slice_sample` function takes two arguments: a data frame-like object to sample from and the number of rows to be randomly selected (`n`).
-
-> Note: You will see in the code above that we use the `set.seed` function. This is because we are using `slice_sample` to artificially pick
-> only 3 of the malignant tumour observations, which uses random sampling to choose which rows will be in the training set. In order to
-> make the code reproducible, we use `set.seed` to specify where the random number generator starts for this 
-> process, which then guarantees the same result, i.e., the same choice of 3 observations, each time the code is run. In general, when your
-> code involves random numbers, if you want *the same result* each time, you should use `set.seed`; if you want a *different result* each time,
-> you should not.
+> Note: You will see in the code above that we use the `set.seed` function.
+> This is because we are using `slice_sample` to artificially pick only 3 of
+> the malignant tumour observations, which uses random sampling to choose which
+> rows will be in the training set. In order to make the code reproducible, we
+> use `set.seed` to specify where the random number generator starts for this
+> process, which then guarantees the same result, i.e., the same choice of 3
+> observations, each time the code is run. In general, when your code involves
+> random numbers, if you want *the same result* each time, you should use
+> `set.seed`; if you want a *different result* each time, you should not.
 
 Suppose we now decided to use $K = 7$ in K-nearest neighbour classification.
 With only 3 observations of malignant tumours, the classifier 
